# interview-insights

./: .gitignore  .gitmodules  Dockerfile  Dockerfile.insights  README.md  docker-compose.yml  pyproject.toml  requirements-insights.txt  requirements.txt
interview_insider/: app.py  app_insights.py  asr_adapter.py  llm_client.py  qa_extractor.py  qa_markdown_exporter.py
interview_insider/prompts/: extracton_models_and_prompts.py
src/interview_insights/: __init__.py
