[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "interview-insights"
version = "0.1.0"
description = "Interview transcript analysis with GPT and speech-to-text ASR dependency"
authors = [{ name = "Irina" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]